  the corresponding filter.
* Implemented smooth mode for the FIR/IIR type of equalizer which performs the
  cross-fade on the change of filter characteristics.
* Implemented functions for converting the frequency to a note.
* Added possiblity to load sample built-in into SFZ file format.
* Added test build for Windows using MSYS2.
* Updated build scripts.

=== 1.0.8 ===
* Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
* Added set of functions to convert Neper to dB and gain values.
* Bugfixes found by Clang compiler.
* Added Clang build for the CI.

=== 1.0.7 ===
* Added dspu::Analyzer::activity() method to check the analyzer's activity.
* Fixed possible memory leakage in dspu::Sample methods.
* Fixed bug in dspu::fade_in and dspu::fade_out methods that didn't copy data
  to destination buffer when the fade length is zero.
* Found and fixed serious performance penalties that could be issued
  by dspu::Limiter on small input buffers.
* Added dspu::InSampleStream class for working with audio sample in streaming manner.
* Added dspu::Sample::load_ext and dspu::Sample::loads_ext methods for loading sample
  as a part of LSPC file when possible.
* Added SCS_AMIN and SCS_AMAX functions for the sidechain input mode.
* Updated build scripts.
* Implemented garbage collection mechanism for the dspu::SamplePlayer.

=== 1.0.6 ===
* Fixed clang errors.

=== 1.0.5 ===
* Updated build scripts.

=== 1.0.4 ===
* Fixed unintialized values in several modules.
* Added Sample::stretch() method for stretching samples.
* Updated dspu::Gate module, now it allows to properly use the reverse gate option.
* Improved mathematics in dspu::Compressor module, added support of limited compression gain.
* Updated build scripts.

=== 1.0.3 ===
* Fixed memory leak in dspu::LatencyDetector module.
* Fixed operation on uninitialized values for dspu::Depopper module.
* Added support of modern C++ 11 standard and above.
* Updated dependencies.
* Updated build scripts.
